--- a/features/support/factory/static/prd.yml
+++ b/features/support/factory/static/prd.yml
@@ -1,2 +1,10 @@
 usuario_inexistente: 'EsseIdNaoExiste'
-usuario_valido: '0uxuPY0cbmQhpEz1'
+usuario_valido: '1f33pNBt7UAYbmeA' #cuidar para nao deletar um id valido
+
+usuario_admin:
+  email: brent.gaylord@gmail.com
+  password: teste
+
+usuario_nao_admin:
+  email: naoadm@qa.com.br
+  password: teste
