--- a/features/support/factory/static/prd.yml
+++ b/features/support/factory/static/prd.yml
@@ -1,5 +1,5 @@
 usuario_invalido: 'EsseIdNaoExiste'
-usuario_valido: '4GCnson8Nlr12DPz' #cuidar para nao deletar um id valido
+usuario_valido: '0uxuPY0cbmQhpEz1' #cuidar para nao deletar um id valido
 
 usuario_admin:
   email: admin@email.com.br
